--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,20 @@ html {
         scroll-behavior: smooth;
     }
 }
+
+body {
+    min-width: 320px; /* min screen size */
+    height: 100%;
+    margin: 0;
+    padding: 0;
+
+    font-weight: inherit;
+    font-size: 100%;
+    line-height: inherit;
+    font-family: "Roboto", "Helvetica Neue", "Helvetica", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans","Droid Sans", "Arial", sans-serif;
+    vertical-align: baseline;
+    color: #222;
+    font-style: inherit;
+
+    border: 0;
+}
