--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,35 @@ body {
 article, aside, details, figcaption, figure, footer, header, main, nav, section {
     display: block;
 }
+
+/* ссылка пропустить меню */
+.skiplink {
+    position: absolute;
+    z-index: 100; /* поверх всех окон */
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    border: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    user-select: none; /*запрещаем выделение*/
+}
+
+.skiplink:active,
+.skiplink:focus {
+    top: 15px;
+    left: 15px;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 10px 20px;
+    overflow: visible;
+    color: #ffffff !important;
+    white-space: inherit;
+    background: #000000;
+    clip: auto;
+    clip-path: none;
+}
