--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,15 @@ article, aside, details, figcaption, figure, footer, header, main, nav, section 
     display: block;
 }
 
+/* предупрждение, что js не работает */
+.no-js {
+    padding: calc(var(--indent) * 2);
+    color: #ffffff;
+    background: red;
+    -webkit-user-select: none;
+            user-select: none; /* запрещаем выделять сообщение об ошибке */
+}
+
 /* ссылка пропустить меню */
 .skiplink {
     position: absolute;
